put css links in all templates

--- a/templates/pastey/detail.html
+++ b/templates/pastey/detail.html
@@ -1,3 +1,7 @@
+<head>
+    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}/css/main.css" />
+</head>
+<body>
 <h1>PyPasteys</h1>
 
 <div id= "headers">
@@ -50,4 +54,4 @@
 <!--Link back to paste form-->
 <br />
 <input type="button" value="Make a new paste" onClick="window.location='/pastey/'">
-
+</body>
