--- a/templates/pastey/list.html
+++ b/templates/pastey/list.html
@@ -1,3 +1,7 @@
+<head>
+    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}/css/main.css" />
+</head>
+<body>
 <h1>PyPasteys</h1>
 
 <!--Show recent code pastes (that are not flagged as private)-->
@@ -52,3 +56,4 @@
 <!--Link back to paste form-->
 <br />
 <input type="button" value="Make a new paste" onClick="window.location='/pastey/'">
+</body>
