--- a/templates/pastey/detail.html
+++ b/templates/pastey/detail.html
@@ -2,56 +2,80 @@
     <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}/css/main.css" />
 </head>
 <body>
-<h1>PyPasteys</h1>
+    <div id="masthead">
+        <div id="pastey_logo">
+                <span class="site_link"><a href="/pastey/"><h1>PyPasteys</h1></a></span>
+        </div>       
+        <div id="most_recent">
+            <span class="site_link"><br /><a href="/pastey">Make a new paste</a></span>
+        </div>
+    </div>
 
-<div id= "headers">
 
-    <!--Title-->
-    <h2>{{paste.title|title}}</h2>
+<div id= "body_wrapper">
     
-    <!--Author-->
-    <h2>
-        Submitted by 
-        {% if paste.author != 'an unknown author' %}
-            {{paste.author|title}}
-        {% else %}
-            {{paste.author}}
-        {% endif %} 
+    {% if last_paste == paste.id %}   
+        <div class="center_text">            
+            <form action="#" method="POST">{% csrf_token %}	            
+                <span class="site_link">
+                    <p>This is your most recent paste. Click <input type="submit" name="paste" value="Delete" /> to delete this paste</p>
+                </span>
+            </form>        
+        </div>        
+
+    {% endif %}
+
+
+
+        <!--Title-->
+    <div id="title_and_styler">
+        <span id="paste_title"><h2>{{paste.title|title}}</h2></span>
         
-    <!--Email-->
-        {% if paste.email %} at 
-            {{paste.email}}
-        {% endif %} 
-        on {{paste.pub_date}}
-    </h2>
+        <!--Style chooser drop down menu and submit button-->
+        <div id="styler">
+            <form action="#" method="POST">{% csrf_token %}
+	                <table>
+		                <tr>
+			                    <td>{{style_chooser.label}}</td>
+			                    <td>{{style_chooser.as_p}}</td>
+			                    <td><input type="submit" name="Change" value="Change Style" /></td>
+		                </tr>
+	                </table>	
+            </form>
+        </div>	 
+    </div>   
     
-    <!--Language-->
-    <p>
-        Written in
-        {% if paste.get_language_display %}
-            {{paste.get_language_display}}
-        {% else %} 
-            an unspecified programming language
-        {% endif %} 
-    </p>
+    <div id="paste_info">    
+        <!--Author-->
+        <p>
+            Submitted by 
+            {% if paste.author != 'an unknown author' %}
+                {{paste.author|title}}
+            {% else %}
+                {{paste.author}}
+            {% endif %} 
+            
+        <!--Email-->
+            {% if paste.email %} at 
+                {{paste.email}}
+            {% endif %} 
+            on {{paste.pub_date}}       
+        
+        <!--Language-->    
+            Written in
+            {% if paste.get_language_display %}
+                {{paste.get_language_display}}
+            {% else %} 
+                an unspecified programming language
+            {% endif %} 
+       </p>    
+    </div>
+    
+     
+   
+    
+    <!--Formatted text-->
+     <style>{{css_style}}</style>
+    {{code|safe}}
 </div>
 
-<!--Style chooser drop down menu and submit button-->
-<form action="#" method="POST">{% csrf_token %}
-	<table>
-		<tr>
-			<td>{{style_chooser.label}}</td>
-			<td>{{style_chooser.as_p}}</td>
-			<td><input type="submit" name="change" value="Change Style" /></td>			
-		</tr>
-	</table>	
-</form>
-
-<!--Formatted text-->
- <style>{{css_style}}</style>
-{{code|safe}}
-
-<!--Link back to paste form-->
-<br />
-<input type="button" value="Make a new paste" onClick="window.location='/pastey/'">
-</body>
