--- a/templates/pastey/list.html
+++ b/templates/pastey/list.html
@@ -2,58 +2,105 @@
     <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}/css/main.css" />
 </head>
 <body>
-<h1>PyPasteys</h1>
+    <a name ="top"></a>
+    <div id="masthead">
+        <div id="pastey_logo">
+                <span class="site_link"><a href="/pastey/"><h1>PyPasteys</h1></a></span>
+        </div>    
+        {% if last_paste != '/pastey' %}
+            <div id="most_recent">
+                <span class="site_link"><br /><a href="/pastey/{{last_paste}}">Your most recent paste</a> <span>
+            </div>
+        {% else %}                
+            <div id="most_recent">
+                <span class="site_link"><br /><a href="/pastey">Make a new paste</a></span>
+            </div>
+        {% endif %} 
 
-<!--Show recent code pastes (that are not flagged as private)-->
-{% if pastes|length > 0 %}
+    </div>
 
-    <!--Heading-->
-    <p>All code pastes:
-      
-    </p>
-    
-    <ul>
-    
-    {% for paste, css_style in pastes %}    
+    <div id= "body_wrapper">
+        <!--Show recent code pastes (that are not flagged as private)-->
+        <div id="paste_list">
+        {% if pastes|length > 0 %}
 
-        <!--Number of the entry-->
-		<p>{{forloop.counter}}. <a href="{{paste.get_absolute_url}}" target="_blank">{{paste.title|title}}</a> 
-        
-        <!--Author-->
-		by 
-		{% if paste.author != 'an unknown author' %}
-		    {{paste.author|title}}
-	    {% else %}
-	        {{paste.author}}
+            <div id="pager" class="site_link">
+                <p>
+                {% if page.has_other_pages and page.has_previous %}
+                    <a href="/pastey/list/1"><<</a>
+                {% else %}
+                    <<        
+                {% endif %}
+                
+                {% if page.has_previous %}
+                    <a href="/pastey/list/{{page.previous_page_number}}"><</a>
+                {% else %}
+                    <
+                {% endif %}
+                
+                {{page_display}} 
+                
+                {% if page.has_next %}
+                    <a href="/pastey/list/{{page.next_page_number}}">></a>
+                {% else %}
+                    >
+                {% endif %}
+                
+                {% if page.has_other_pages and page.has_next %}
+                    <a href="/pastey/list/{{last_page}}">>></a>
+                {% else %}
+                    >>
+                {% endif %}
+                </p>
+            </div>
+             
+		            
+            {% for item_index, css_style, paste in pastes %}    
+                <div class="list_header">
+                    <!--Number of the entry and Title-->
+		            
+		            <a href="{{paste.get_absolute_url}}">
+		                {{item_index}}. {{paste.title|title}}
+                        
+                        <!--Author-->
+		                by 
+		                {% if paste.author != 'an unknown author' %}
+		                    {{paste.author|title}}
+	                    {% else %}
+	                        {{paste.author}}
+                        {% endif %}
+		
+		                <!--Language-->
+		                written in 
+		                {% if paste.language %}
+		                    {{paste.get_language_display|title}}
+	                    {% else %}
+	                        an unspecified programming language
+                        {% endif %}
+		
+                        <!--Date/Time-->
+                        on {{paste.pub_date}}
+		            </a>
+		        </div>
+		        
+                <!--Code snippet-->
+                <style>{{css_style}}</style>
+                {{paste.code_paste|safe}}
+                
+                <!--Add some space between this paste and the next-->
+				<br />
+            {% endfor %}
+            
+            
+        {% else %}
+
+            <!--Message if no pastes are available-->
+            <p>No code pastes are available.</p>
+
         {% endif %}
-		
-		<!--Language-->
-		written in 
-		{% if paste.language %}
-		    {{paste.get_language_display|title}}
-	    {% else %}
-	        an unspecified programming language
-        {% endif %}
-		
-        <!--Date/Time-->
-        on {{paste.pub_date}}
-		</p>
-		
-        <!--Code snippet-->
-        <style>{{css_style}}</style>
-        {{paste.code_paste|safe}}
-					
-    {% endfor %}
-    </ul>    
-    
-{% else %}
-
-    <!--Message if no pastes are available-->
-    <p>No code pastes are available.</p>
-
-{% endif %}
-
-<!--Link back to paste form-->
-<br />
-<input type="button" value="Make a new paste" onClick="window.location='/pastey/'">
+        </div>
+        <div class="center_text">
+            <span class="site_link"><a href="#top"> Back to top </a></span>    
+        </div>
+    </div>
 </body>
