--- a/templates/pastey/index.html
+++ b/templates/pastey/index.html
@@ -9,7 +9,7 @@
         </div>
         {% if last_paste != '/pastey' %}
             <div id="most_recent">
-                <span class="site_link"><br /><a href="/pastey/{{last_paste}}">Your most recent paste</a> <span>
+                <span class="site_link"><br /><a href="/pastey/detail/{{last_paste}}">Your most recent paste</a> <span>
             </div>
         {% endif %}
     </div>
