Removed helper functions from Models.py and put them in pretty.py the highlighting module. Changed the import pastey.models in pretty.py to avoid circular dependency. This is now used inline only where needed

--- a/templates/pastey/list.html
+++ b/templates/pastey/list.html
@@ -23,19 +23,18 @@
                         <td>{{form.field}}</td>
                         <td><input type="submit" name="search" value="Ok" />
                         </td>
-                        <tr>
+                    </tr>
+                    <tr>
                         <td></td>
-                        <td>showing {{results}} 
+                        <td colspan = "2">showing {{results}} 
                         {% if results == 1 %}
                             result
                         {% else %}
                             results
                         {% endif %}
                         </td>
-                        </tr>
                     </tr>
-                </table>
-                
+                </table>                
             </form>
         </div>
         <!--Show recent code pastes (that are not flagged as private)-->
