Search feature on the list page is now uses a form rather than a modelform

--- a/templates/pastey/list.html
+++ b/templates/pastey/list.html
@@ -16,9 +16,7 @@
             <form name = "search" action ="#" method="POST">{% csrf_token %}
                 <table>
                     <tr>
-                        <th>
-                            {{form.keyword.label}}
-                        </th>
+                        <th>Search</th>
                         <td>{{form.keyword}}</td>
                         <td>{{form.field}}</td>
                         <td><input type="submit" name="search" value="Ok" />
