Changed Urlconfs so that /number/ goes to detail view, /list/ without a number goes to the first page(non-404 with empty database) and the copy feature url is now /edit/number
Also added RequestFactory to the test suite, and provided checks for sessions
so that if they are unavailable they are not used

--- a/templates/pastey/detail.html
+++ b/templates/pastey/detail.html
@@ -70,7 +70,7 @@
             <!--Alternate detail tabs-->
             <span id="plain_tab"><a href="/pastey/plain/{{paste.id}}/">Plain</a></span>
             <span id="html_tab"><a href="/pastey/html/{{paste.id}}/{{current_style}}">HTML</a></span>            
-            <span id="copy_tab"><a href="/pastey/{{paste.id}}">Copy</a></span>
+            <span id="copy_tab"><a href="/pastey/edit/{{paste.id}}">Copy</a></span>
             <span id="download_tab"><a href="{{paste.txt_file.url}}">Download</a></span>
         </div>
         
