--- a/templates/pastey/index.html
+++ b/templates/pastey/index.html
@@ -23,7 +23,7 @@
         {% if pastes|length > 0 %}         
             <div class="center_text">
                 <span class="site_link">                    
-                    <a href="/pastey/list/1/">View recent code pastes</a>
+                    <a href="/pastey/list/">View recent code pastes</a>
                     <br />
                 </span>
             </div>
