Settings now make use of collectstatic settings. Delete_old periodic task is now set to every 15 mintues

--- a/templates/400.html
+++ b/templates/400.html
@@ -5,5 +5,6 @@
 {% block content %}
 <h1>Page not found</h1>
 
-<p>Sorry, but the requested page could not be found.</p>
+<p>Sorry, but the requested page could not be found. You may be trying to view
+a paste that is more than one week old.</p>
 {% endblock %}
