--- a/templates/pastey/html.html
+++ b/templates/pastey/html.html
@@ -1,2 +1,11 @@
-<pre>{{code}}</pre>
+<title>PyPastebin - HTML - {{paste.title|title}}</title>
+<style>
+    .linenodiv{
+        background-color: #FFF;
+        color: #000;
+    }
+</style>
+
+<pre>{{code|safe}}</pre>
+
 
